--- a/client/app/user/user-home/user-home.scss
+++ b/client/app/user/user-home/user-home.scss
@@ -18,12 +18,6 @@
     }
   }
 
-  .welcome-text h2 {
-    font-weight: 300;
-    font-size: 26px;
-    margin-top: 0;
-  }
-
   .avatar {
     background: lighten($color-geyser,8%);
     padding: 2.5rem;
@@ -34,6 +28,16 @@
 
   .welcome-message {
     min-width: 410px;
+    @include media-breakpoint-down(xs) {
+      min-width: auto;
+      h3 > span {
+        display: block;
+        margin: 0.25rem 0 1rem;
+      }
+      p {
+        font-size: 16px;
+      }
+    }
   }
 
   .actions {
@@ -198,7 +202,6 @@ body:not(.collapsed-menu) .actions {
     }
   }
 }
-
 body.collapsed-menu .actions {
   @media (min-width: 1050.5px) and (max-width: 1245px) {
     margin-top: 0;
